--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-animate"         : "~1.3.15",
     "underscore"              : "~1.8.2",
     "bootstrap"               : "~3.3.2",
-    "components-font-awesome" : "~4.3.0"
+    "prism"                   : "~1.4.1"
   },
   "private" : true
 }
