--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "get-with-git",
   "version": "1.0.0",
-  "description": "Tech Crunch Munch - Get with Git",
-  "main": "index.js",
+  "description": "Tech Crunch Munch - Tighten Your SASS",
+  "main": "server.js",
   "scripts": {
+    "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeff Heinrichs <jeff.heinrichs@icfi.com>",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^2.9.12",
-    "body-parser": "^1.12.0",
-    "cookie-parser": "^1.3.4",
-    "csurf": "^1.7.0",
     "express": "^4.12.0",
-    "express-session": "^1.10.3",
-    "helmet": "^0.6.1",
-    "jade": "^1.9.2",
-    "mongoose": "^3.8.24",
-    "node-rest-client": "^1.4.4"
+    "jade": "^1.9.2"
   },
   "devDependencies": {
     "bower": "^1.3.12"
